--- a/style.css
+++ b/style.css
@@ -1,67 +1,68 @@
 body{
+    background-color: hsl(0, 0%, 100%);
     margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: hsl(220, 15%, 85%);
+    padding: 0;
+    font-family: 'Lato', sans-serif;
 }
 .container{
-    width: 1440px;
-    height: 100vh;
+    width: 1200px;
+    height: 90vh;
+    margin: 0px 80px 40px;
+    background-color: hsl(30, 38%, 92%);
 }
-.wrapper{
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    background-color: #ffffff;
-    width: 250px;
+.card{
+    display: flex;
+    flex-wrap: wrap;
+    width: 500px;
+    transform: translate(70%, 30%);
+}
+.image{
+    flex: 50%;
     height: 400px;
-    display: inline-block;
-    border-radius: 20px;
-    margin-top: 80px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
 .content{
-    position: relative;
+    flex: 50%;
+    background-color:  hsl(0, 0%, 100%);
+    height: 375px;
 }
-.image img{
-    width: 230px;
-    height: 200px;
+.content h6{
+    font-weight: 400;
+    color: #ddd;
+    letter-spacing: 2px;
+    margin-left: 15px;
+}
+p{
+    margin-left: 15px;
+    font-size: 14px;
+    font-weight: 400;
+}
+del{
+    margin-left: 15px;
+    font-size: 14px;
+    font-weight: lighter;
+    color: #bbb;
+}
+h2{
+    margin-left: 15px;
+}
+h1{
+    margin-left: 15px;
+    color:  rgba(6, 69, 6, 0.764);
+}
+button{
+    background-color: rgba(6, 69, 6, 0.764);
+    color:  hsl(0, 0%, 100%);
+    border-style: none;
+    width: 80%;
     padding: 10px;
-    border-radius: 20px;
+    border-radius: 10px;
+    margin: 5px 20px 10px 20px;
 }
-.text{
-    margin: 30px 5px;
-    font-family: 'Roboto', sans-serif;
+svg{
+    margin-right: 5px;
 }
-.text b{
-    font-weight: 700px;
-}
-.text p{
-    font-size: 15px;
-    font-weight: 300;
-}
-
-@media (max-width: 375px){
-    .wrapper{
-        background-color: #ffffff;
-        width: 200px;
-        height: 300px;
-        display: inline-block;
-        border-radius: 20px;
-        margin-top: 40px;
-    }
-    .image img{
-        width: 200px;
-        height: 200px;
-        padding: 8px;
-        border-radius: 20px;
-    }
-    .text{
-        margin: 20px 5px;
-    }
-    .text b{
-        font-weight: 400px;
-    }
-    .text p{
-        font-size: 13px;
-        font-weight: 200;
-    }
+.container ~ p{
+    text-align: center;
 }
