--- a/style.css
+++ b/style.css
@@ -33,6 +33,41 @@ body{
     letter-spacing: 2px;
     margin-left: 15px;
 }
+@media screen and (max-width: 600px){
+    body{
+        width: 100%;
+        height: 100vh;
+        background-color: hsl(30, 38%, 92%);
+    }
+    .card{
+        display: flex;
+        flex-direction: column;
+        width: 300px;
+        overflow: scroll;
+        padding: 0;
+        border-radius: 10px 10px 10px 10px;
+        position: relative;
+    }
+    .image{
+        flex: 100%;
+        height: 200px;
+    }
+    .image img{
+        width: 300px;
+        height: 200px;
+    }
+    .content{
+        flex: 100%;
+        width: 300px;
+        background-color:  hsl(0, 0%, 100%);
+        height: 200px;
+    }
+    .container ~ p{
+        text-align: center;
+        padding: 10px;
+        bottom: 0;
+    }
+}
 p{
     margin-left: 15px;
     font-size: 14px;
