--- a/style.css
+++ b/style.css
@@ -1,103 +1,76 @@
 body{
-    background-color: hsl(0, 0%, 100%);
-    margin: 0;
+    background-color: hsl(216, 12%, 8%);
     padding: 0;
-    font-family: 'Lato', sans-serif;
-}
+    margin: 0;
+    color: #fff;
+    font-size: 15px;
+    font-family: 'Overpass', sans-serif;
+
+} 
 .container{
-    width: 1200px;
-    height: 90vh;
-    margin: 0px 80px 40px;
-    background-color: hsl(30, 38%, 92%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding-left: 10%;
 }
 .card{
-    display: flex;
-    flex-wrap: wrap;
-    width: 500px;
-    transform: translate(70%, 30%);
+    width: 350px;
+    background-color: hsl(213, 19%, 18%);
+    padding: 20px;
+    border-radius: 20px;
 }
-.image{
-    flex: 50%;
-    height: 400px;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+.btn-container button{
+    padding: 15px;
+    height: 40px;
+    background-color: hsl(212, 17%, 20%);
+    border: none;
+    outline: none;
+    border-radius: 50%;
+    margin: 5px;
+    color: hsl(217, 12%, 63%);
+}
+/* hover state*/
+.submit-btn:hover{
+    background-color: hsl(0, 0%, 100%);
+    color: hsl(25, 97%, 53%);
+}
+.btn-container button:hover{
+    background-color: hsl(216, 12%, 54%);
+    color: hsl(0, 0%, 100%);
+}
+/* active state*/
+.btn-container{
+    margin-bottom: 10px;
+}
+.btn-container button:active{
+    background-color: hsl(25, 97%, 53%);
+    color: hsl(0, 0%, 100%);
 }
 .content{
-    flex: 50%;
-    background-color:  hsl(0, 0%, 100%);
-    height: 375px;
-}
-.content h6{
-    font-weight: 400;
-    color: #ddd;
-    letter-spacing: 2px;
-    margin-left: 15px;
-}
-@media screen and (max-width: 600px){
-    body{
-        width: 100%;
-        height: 100vh;
-        background-color: hsl(30, 38%, 92%);
-    }
-    .card{
-        display: flex;
-        flex-direction: column;
-        width: 300px;
-        overflow: scroll;
-        padding: 0;
-        border-radius: 10px 10px 10px 10px;
-        position: relative;
-    }
-    .image{
-        flex: 100%;
-        height: 200px;
-    }
-    .image img{
-        width: 300px;
-        height: 200px;
-    }
-    .content{
-        flex: 100%;
-        width: 300px;
-        background-color:  hsl(0, 0%, 100%);
-        height: 200px;
-    }
-    .container ~ p{
-        text-align: center;
-        padding: 10px;
-        bottom: 0;
-    }
-}
-p{
-    margin-left: 15px;
-    font-size: 14px;
-    font-weight: 400;
-}
-del{
-    margin-left: 15px;
-    font-size: 14px;
-    font-weight: lighter;
-    color: #bbb;
-}
-h2{
-    margin-left: 15px;
-}
-h1{
-    margin-left: 15px;
-    color:  rgba(6, 69, 6, 0.764);
-}
-button{
-    background-color: rgba(6, 69, 6, 0.764);
-    color:  hsl(0, 0%, 100%);
-    border-style: none;
-    width: 80%;
     padding: 10px;
-    border-radius: 10px;
-    margin: 5px 20px 10px 20px;
 }
-svg{
-    margin-right: 5px;
+.submit-btn{
+    width: 100%;
+    padding: 10px 20px;
+    border: none;
+    outline: none;
+    background:  hsl(25, 97%, 53%);
+    color: hsl(0, 0%, 100%);
+    border-radius: 20px;
 }
-.container ~ p{
-    text-align: center;
+.card-header img{
+    background-color: hsl(212, 17%, 20%);
+    border-radius: 50%;
+    padding: 20px;
+}
+.hide{
+    display: none;
+}
+
+@media screen and (min-width: 400){
+    .container{
+        width: 300px;
+        margin: 5px 5px 5px 5px;
+    }
 }
